fixed height of html - no scrollbar anymore

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   vertical-align: baseline;
   outline: none;
 }
-html { height: 101%; }
 body { font-size: 62.5%; line-height: 1; font-family: 'Junge', serif; }
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section { display: block; }
